--- a/1.html
+++ b/1.html
@@ -5,20 +5,13 @@
   <title>PRISM</title>
   <meta charset="utf-8">
 </head>
-
-
-
+<body>
   <h1><a href="http://www.prismlight.co.kr/" target="_blank" title="PRISM">PRISM</a></h1>
     <h4>The Human Centric Lighting Company</h4>
-
-
     <p style="margin-top: 45px;" style="margin-bottom: 45px;">
-      부천본사: 경기도 부천시 원미구 부천로198번길 36
+    부천본사: 경기도 부천시 원미구 부천로198번길 36
     (춘의동,춘의테크노파크 101동 1307,1308,1309,1501호)
     </p>
-
-      <IMG SRC="prism.jpg" width="45%">
-
-
+    <IMG SRC="prism.jpg" width="45%">
 </body>
 </html>
