--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <title>PRISM</title>
   <meta charset="utf-8">
 </head>
-
+<body>
 
 
   <h1><a href="http://www.prismlight.co.kr/" target="_blank" title="PRISM">PRISM</a></h1>
