--- a/3.html
+++ b/3.html
@@ -5,18 +5,12 @@
   <title>PRISM</title>
   <meta charset="utf-8">
 </head>
-
-
-
+<body>
   <h1><a href="http://www.prismlight.co.kr/" target="_blank" title="PRISM">PRISM</a></h1>
     <h4>The Human Centric Lighting Company</h4>
-
     <p style="margin-top: 45px;" style="margin-bottom: 45px;">
-마곡주소: 서울특별시 마곡동 790-1 프리즘사옥
+      마곡주소: 서울특별시 마곡동 790-1 프리즘사옥
     </p>
-
-      <IMG SRC="prism.jpg" width="45%">
-
-
+    <IMG SRC="prism.jpg" width="45%">
 </body>
 </html>
