--- a/2.html
+++ b/2.html
@@ -5,18 +5,12 @@
   <title>PRISM</title>
   <meta charset="utf-8">
 </head>
-
-
-
+<body>
   <h1><a href="http://www.prismlight.co.kr/" target="_blank" title="PRISM">PRISM</a></h1>
     <h4>The Human Centric Lighting Company</h4>
-
     <p style="margin-top: 45px;" style="margin-bottom: 45px;">
-  화성공장: 경기도 화성시 무하로110번길 10 (온석동)
+    화성공장: 경기도 화성시 무하로110번길 10 (온석동)
     </p>
-
-      <IMG SRC="prism.jpg" width="45%">
-
-
+    <IMG SRC="prism.jpg" width="45%">
 </body>
 </html>
